@@ -111,7 +111,7 @@ namespace Jack
     int JackAlsaAdapter::Close()
     {
 #ifdef JACK_MONITOR
-        fTable.Save();
+        fTable.Save(fHostBufferSize, fHostSampleRate, fAdaptedSampleRate, fAdaptedBufferSize);
 #endif
         switch ( fThread.GetStatus() )
         {
